welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.code
def growFlowers(d: Color){
	marque(d);avance();marque(Color.YELLOW);avance();marque(d);recule();droite();avance();marque(d);recule(2);marque(d);
}

def marque(c: Color){setCouleurBrosse(c);baisseBrosse();leveBrosse()}
growFlowers(Color.RED);